🎉auto update by Gmeek action

--- a/backup/欠薪浪潮的根源：被压榨的劳动者与资本集团虚伪的“社会责任”.md
+++ b/backup/欠薪浪潮的根源：被压榨的劳动者与资本集团虚伪的“社会责任”.md
@@ -1,6 +1,6 @@
 来自“出路报”的文章，有删改，我社也在致力于写出我们的文章
 
-近期，全国各地接连爆发工人讨薪事件。2025 年11 月 4 日，浙江省台州市温岭市松门镇东部新区，联永智能科技有限公司（“联永公司”）门口大量工人聚集抗议示威，工人的子女曾拿着喇叭，到厂门口为家长维权、讨薪。有工人表示被拖欠工资五个月。浙江温岭、北京、武汉、文山——从沿海到内陆，从民企到央企，拖欠工资的现象无处不在。成百上千名工人，被迫堵门、上街，只为索回自己用血汗换来的生存权。
+近期，全国各地接连爆发工人讨薪事件。2025 年11 月 4 日，浙江省台州市温岭市松门镇东部新区，联永智能科技有限公司（“联永公司”）门口大量工人聚集抗议示威，工人的子女曾拿着喇叭，到厂门口为家长维权、讨薪。有工人表示被拖欠工资五个月。浙江温岭、北京、武汉、文山——从沿海到内陆，拖欠工资的现象无处不在。成百上千名工人，被迫堵门、上街，只为索回自己用血汗换来的生存权。
 
 这不是偶然的个别事故，而是当代社会结构中资本对劳动的系统性掠夺的必然结果。在现在，资本不断扩张，利润被层层攫取，劳动者却被抛在最底层。企业和工程项目层层分包、层层盘剥，最终由最无权、最辛苦的工人承担全部风险。
 
