--- a/backup/欢迎加入番禺马列毛主义多校联合社团.md
+++ b/backup/欢迎加入番禺马列毛主义多校联合社团.md
@@ -1,10 +1,10 @@
 这里是番禺马列毛主义多校联合社团，我们的主要通讯方式为一款加密通讯软件，我们欢迎任何对马列毛主义感兴趣的人加入我们。
 
-任何有关马列毛主义的文章都可以在通讯软件群聊进行投稿，学生的精力有限，我们不介意AI文章，因为AI是可以低成本在短时间内把你的观点与立场转换为高质量文章的几乎唯一方式，我们的原创文章几乎都有AI生成内容。不需要你标注AI内容，投稿条件只要整体文章质量与观点立场达标即可，符合条件的投稿文章都会在网站上展示。
+任何有关马列毛主义的文章都可以在论坛发表进行投稿，学生的精力有限，我们不介意AI文章，因为AI是可以低成本在短时间内把你的观点与立场转换为高质量文章的几乎唯一方式，我们的原创文章几乎都有AI生成内容。不需要你标注AI内容，投稿条件只要整体文章质量与观点立场达标即可，符合条件的投稿文章都会在网站上展示。
 
 只要你注册了论坛账号，你就被视作我们社团的一员
 这里基本不会崩溃，这里和论坛是最中心的活动地点。
 
-请阅读[使用通讯工具](https://1.cpbbs.dpdns.org/post/shi-yong-tong-xun-ruan-jian.html)和[使用论坛](https://1.cpbbs.dpdns.org/post/shi-yong-lun-tan.html)
+请阅读[使用论坛](https://1.cpbbs.dpdns.org/post/shi-yong-lun-tan.html)
 
 论坛网址：https://2.cpbbs.dpdns.org
